@@ -9,6 +9,8 @@ import org.slf4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.test.annotation.DirtiesContext;
+
 import workshop.demo.ApplicationLayer.AdminService;
 import workshop.demo.ApplicationLayer.OrderService;
 import workshop.demo.ApplicationLayer.PaymentServiceImp;
@@ -46,33 +48,52 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
+
 @SpringBootTest
-public class PurchaseTests  {
+@DirtiesContext(classMode = DirtiesContext.ClassMode.AFTER_EACH_TEST_METHOD)
+public class PurchaseTests {
 
+    @Autowired
+    private NotificationRepository notificationRepository;
+    @Autowired
+    private StoreRepository storeRepository;
+    @Autowired
+    private StockRepository stockRepository;
+    @Autowired
+    private OrderRepository orderRepository;
+    @Autowired
+    private PurchaseRepository purchaseRepository;
+    @Autowired
+    private UserSuspensionRepo suspensionRepo;
+    @Autowired
+    private AuthenticationRepo authRepo;
 
+    @Autowired
+    PaymentServiceImp payment;
+    @Autowired
+    SupplyServiceImp serviceImp;
 
-    @Autowired private NotificationRepository notificationRepository;
-    @Autowired private StoreRepository storeRepository;
-    @Autowired private StockRepository stockRepository;
-    @Autowired private OrderRepository orderRepository;
-    @Autowired private PurchaseRepository purchaseRepository;
-    @Autowired private UserSuspensionRepo suspensionRepo;
-    @Autowired private AuthenticationRepo authRepo;
+    @Autowired
+    SUConnectionRepository sIsuConnectionRepo;
 
-    @Autowired PaymentServiceImp payment ;
-    @Autowired SupplyServiceImp serviceImp;
-
-    @Autowired SUConnectionRepository sIsuConnectionRepo;
-
-    @Autowired Encoder encoder ;
-    @Autowired UserRepository userRepo;
-    @Autowired UserSuspensionService suspensionService;
-    @Autowired AdminService adminService;
-    @Autowired UserService userService;
-    @Autowired StockService stockService;
-    @Autowired StoreService storeService;
-    @Autowired PurchaseService purchaseService;
-    @Autowired OrderService orderService ;
+    @Autowired
+    Encoder encoder;
+    @Autowired
+    UserRepository userRepo;
+    @Autowired
+    UserSuspensionService suspensionService;
+    @Autowired
+    AdminService adminService;
+    @Autowired
+    UserService userService;
+    @Autowired
+    StockService stockService;
+    @Autowired
+    StoreService storeService;
+    @Autowired
+    PurchaseService purchaseService;
+    @Autowired
+    OrderService orderService;
 
     String NOToken;
     String NGToken;
@@ -80,15 +101,13 @@ public class PurchaseTests  {
     String GToken;
     String Admin;
 
-
     @BeforeEach
     void setup() throws Exception {
         System.out.println("===== SETUP RUNNING =====");
 
         GToken = userService.generateGuest();
-                userService.register(GToken, "user", "user", 25);
-                        NGToken = userService.login(GToken, "user", "user");
-
+        userService.register(GToken, "user", "user", 25);
+        NGToken = userService.login(GToken, "user", "user");
 
         String OToken = userService.generateGuest();
         userService.register(OToken, "owner", "owner", 25);
@@ -103,24 +122,20 @@ public class PurchaseTests  {
 
         // ======================= PRODUCT & ITEM ADDITION =======================
         String[] keywords = { "Laptop", "Lap", "top" };
-        stockService.addProduct(NOToken, "Laptop", Category.ELECTRONICS, "Gaming Laptop", keywords);
+        int productId = stockService.addProduct(NOToken, "Laptop", Category.ELECTRONICS, "Gaming Laptop", keywords);
 
-        assertEquals(1, stockService.addItem(1, NOToken, 1, 5, 2000, Category.ELECTRONICS));
-        itemStoreDTO = new ItemStoreDTO(1, 2, 2000, Category.ELECTRONICS, 0, 1,"Laptop");
-                stockService.setProductToRandom(NOToken,1,1,2000,1,5000);
-                        stockService.setProductToBid(NOToken,1,1,1); 
-                               stockService.setProductToAuction(NOToken,1,1,1,1000,2);
-                               assertTrue(stockService.getAllAuctions(NOToken, createdStoreId).length==1);
-                                assertTrue(stockService.getAllRandomInStore(NOToken, createdStoreId).length==1);
-                               assertTrue(stockService.getAllBidsStatus(NOToken, createdStoreId).length==1);
+        assertEquals(1, stockService.addItem(createdStoreId, NOToken, productId, 10, 2000, Category.ELECTRONICS));
+        itemStoreDTO = new ItemStoreDTO(1, 2, 2000, Category.ELECTRONICS, 0, createdStoreId, "Laptop");
+        stockService.setProductToRandom(NOToken, productId, 1, 2000, createdStoreId, 5000);
+        stockService.setProductToAuction(NOToken, createdStoreId, productId, 1, 1000, 2);
+        assertTrue(stockService.getAllAuctions(NOToken, createdStoreId).length == 1);
+        assertTrue(stockService.getAllRandomInStore(NOToken, createdStoreId).length == 1);
+      //  assertTrue(stockService.getAllBidsStatus(NOToken, createdStoreId).length == 1);
 
-  String token = userService.generateGuest();
-       userService.register(token, "adminUser2", "adminPass2",22);
+        String token = userService.generateGuest();
+        userService.register(token, "adminUser2", "adminPass2", 22);
         Admin = userService.login(token, "adminUser2", "adminPass2");
-       userService.setAdmin(Admin, "123321", 6);
-
-
-
+        userService.setAdmin(Admin, "123321", authRepo.getUserId(Admin));
 
         // ======================= SECOND GUEST SETUP =======================
 
@@ -129,43 +144,153 @@ public class PurchaseTests  {
     @AfterEach
 
     void tearDown() {
-            userRepo.clear();
-            storeRepository.clear();
-            stockRepository.clear();
-            orderRepository.clear();
-            suspensionRepo.clear();
-            purchaseRepository.clear();
-            sIsuConnectionRepo.clear();
-
-
+        userRepo.clear();
+        storeRepository.clear();
+        stockRepository.clear();
+        orderRepository.clear();
+        suspensionRepo.clear();
+        purchaseRepository.clear();
+        sIsuConnectionRepo.clear();
 
     }
-    //Needs Fixing!
-    //AddBID
+
+    // Needs Fixing!
+    // AddBID
+   @Test
+   void Add_BidProductToSpecialCart_Success_acceptBID() throws Exception {
+
+       // Act
+               stockService.setProductToBid(NOToken, 1, 1, 1);
+
+
+       boolean a = stockService.addRegularBid(NGToken, 1, 1, 10);
+       for (BidDTO iterable_element : stockService.getAllBidsStatus(NOToken, 1)) {
+           System.err.println(iterable_element.bidId);
+       }
+       assertTrue(a);
+       assertTrue(stockService.getAllBidsStatus(NOToken, 1)[0].bids[0].getStatus().equals(Status.BID_PENDING));
+       assertFalse(stockService.getAllBidsStatus(NOToken, 1)[0].isAccepted);
+       stockService.acceptBid(NOToken, 1, 1, stockService.getAllBidsStatus(NOToken, 1)[0].bids[0].getId());
+       assertTrue(stockService.getAllBidsStatus(NOToken, 1)[0].bids[0].getStatus().equals(Status.BID_ACCEPTED));
+
+       assertTrue(stockService.getAllBidsStatus(NOToken, 1)[0].isAccepted);
+       PaymentDetails paymentDetails = PaymentDetails.testPayment(); // fill if needed
+       SupplyDetails supplyDetails = SupplyDetails.getTestDetails(); // fill if needed
+       try{
+           ReceiptDTO[] receipts = purchaseService.finalizeSpecialCart(NGToken, paymentDetails, supplyDetails);
+           assertNotNull(receipts);
+           assertEquals(1, receipts.length);
+           assertEquals("TestStore", receipts[0].getStoreName());
+           assertEquals(10,
+                   receipts[0].getProductsList().size() * receipts[0].getProductsList().get(0).getPrice());
+
+           List<ReceiptDTO> result = orderService.getReceiptDTOsByUser(NGToken);
+
+           assertEquals(1, result.size());
+           ReceiptDTO r = result.get(0);
+           assertEquals("TestStore", r.getStoreName());
+           assertEquals(10, r.getFinalPrice());
+
+       }
+       catch (Exception exception){
+           System.out.println(exception);
+       }
+
+
+       // <<<<<<< HEAD
+
+       // Assert
+   }
+
     @Test
-    void Add_BidProductToSpecialCart_Success_acceptBID() throws Exception {
-       
-        // Act
-              stockService.setProductToBid(NOToken,1,1,1); 
+    void Add_BidProductToSpecialCart_Success_rejectBID() throws Exception {
+           int x=     stockService.setProductToBid(NOToken, 1, 1, 1);
 
 
-        stockService.addRegularBid(NGToken, 1, 1, 10);
-        assertTrue(stockService.getAllBidsStatus(NOToken, 1)[0].bids[0].getStatus().equals(Status.BID_PENDING));
+        stockService.addRegularBid(NGToken, x, 1, 10);
+
+        System.out.println("hbfsjkhfsgjkhsfgjk"+stockService.getAllBidsStatus(NOToken, 1).length);
+                System.out.println("hbfsjkhfsgjkhsfgjk"+stockService.getAllBidsStatus(NOToken, 1)[0].bids.length);
+
         assertFalse(stockService.getAllBidsStatus(NOToken, 1)[0].isAccepted);
-        stockService.acceptBid(NOToken, 1, 1, 1);
-                assertTrue(stockService.getAllBidsStatus(NOToken, 1)[0].bids[0].getStatus().equals(Status.BID_ACCEPTED));
+        stockService.rejectBid(NOToken, 1, x,              stockService.getAllBidsStatus(NOToken, 1)[0].bids[0].getId());
 
 
-         assertTrue(stockService.getAllBidsStatus(NOToken, 1)[0].isAccepted);
-         PaymentDetails paymentDetails = PaymentDetails.testPayment(); // fill if needed
+
+        assertFalse(stockService.getAllBidsStatus(NOToken, 1)[0].isAccepted);
+
+        // Assert
+    }
+
+    @Test
+    void Add_BidProduct_Failure_InvalidToken() throws UIException {
+        String token = "bad-token";
+
+        // <<<<<<< HEAD
+
+        UIException ex = assertThrows(UIException.class, () -> stockService.addRegularBid(token, 0, 100, 30.0));
+
+        assertEquals("Invalid token!", ex.getMessage());
+    }
+
+    @Test
+    void Add_BidProduct_Failure_UserSuspended() throws Exception {
+    // <<<<<<< HEAD
+
+    suspensionService.suspendRegisteredUser(authRepo.getUserId(NGToken), 1, Admin);
+
+    UIException ex = assertThrows(UIException.class, () ->
+    stockService.addRegularBid(NGToken, 1, 1, 30.0)
+    );
+
+    assertEquals("Suspended user trying to perform an action", ex.getMessage());
+    }
+
+    @Test
+    void Add_BidProduct_Failure_StoreNotFound() throws Exception {
+        // <<<<<<< HEAD
+
+        UIException ex = assertThrows(UIException.class, () -> stockService.addRegularBid(NGToken, 0, 2, 30.0));
+
+        assertEquals("store not found on active purchases hashmap", ex.getMessage());
+    }
+
+    @Test
+    void Add_BidProduct_Failure_BidNotFound() throws Exception {
+       
+
+        DevException ex = assertThrows(DevException.class, () -> stockService.addRegularBid(NGToken, 2, 1, 30.0));
+
+        assertEquals("Bid ID not found in active bids!", ex.getMessage());
+    }
+
+    // Needs Fixing!
+    // AddAUCTION
+    @Test
+    void Add_AuctionBidToSpecialCart_Success_won() throws Exception {
+        stockService.addBidOnAucction(NGToken, 1, 1, 10);
+        assertTrue(stockService.getAllAuctions(NOToken, 1).length == 1);
+        assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids.length == 1);
+        assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids[0].getStatus().equals(Status.AUCTION_PENDING));
+
+        Thread.sleep(500);
+        assertTrue(stockService.getAllAuctions(NOToken, 1)[0].status.equals(AuctionStatus.IN_PROGRESS));
+        assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids[0].getStatus().equals(Status.AUCTION_PENDING));
+
+        Thread.sleep(500);
+
+        assertTrue(stockService.getAllAuctions(NOToken, 1)[0].status.equals(AuctionStatus.FINISH));
+        assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids[0].getStatus().equals(Status.AUCTION_WON));
+
+        PaymentDetails paymentDetails = PaymentDetails.testPayment(); // fill if needed
         SupplyDetails supplyDetails = SupplyDetails.getTestDetails(); // fill if needed
-      ReceiptDTO[] receipts =   purchaseService.finalizeSpecialCart(NGToken, paymentDetails, supplyDetails);
+        ReceiptDTO[] receipts = purchaseService.finalizeSpecialCart(NGToken, paymentDetails, supplyDetails);
 
-  assertNotNull(receipts);
+        assertNotNull(receipts);
         assertEquals(1, receipts.length);
         assertEquals("TestStore", receipts[0].getStoreName());
         assertEquals(10,
-                receipts[0].getProductsList().size() * receipts[0].getProductsList().getFirst().getPrice());
+                receipts[0].getProductsList().size() * receipts[0].getProductsList().get(0).getPrice());
 
         List<ReceiptDTO> result = orderService.getReceiptDTOsByUser(NGToken);
 
@@ -174,306 +299,158 @@ public class PurchaseTests  {
         assertEquals("TestStore", r.getStoreName());
         assertEquals(10, r.getFinalPrice());
 
-// <<<<<<< HEAD
-
-        // Assert
-    }
-     @Test
-    void Add_BidProductToSpecialCart_Success_rejectBID() throws Exception {
-      stockService.setProductToBid(NOToken,1,1,1); 
-
-        // Act
-        
-        stockService.addRegularBid(NGToken, 1, 1, 10);
-                stockService.addRegularBid(NGToken, 1, 1, 10);
-
-
-        assertFalse(stockService.getAllBidsStatus(NOToken, 1)[0].isAccepted);
-        stockService.rejectBid(NOToken, 1, 1, 2);
-
-// <<<<<<< HEAD
-
-         assertFalse(stockService.getAllBidsStatus(NOToken, 1)[0].isAccepted);
-        
-
-        // Assert
-    }
-
-
-    @Test
-    void Add_BidProduct_Failure_InvalidToken() throws UIException {
-        String token = "bad-token";
-
-// <<<<<<< HEAD
-       
-
-        UIException ex = assertThrows(UIException.class, () ->
-                stockService.addRegularBid(token, 0, 100, 30.0)
-        );
-
-
-        assertEquals("Invalid token!", ex.getMessage());
     }
 
     @Test
-    void Add_BidProduct_Failure_UserSuspended() throws Exception {
-// <<<<<<< HEAD
-       
+    void Add_AuctionBidToSpecialCart_Success_lost() throws Exception {
+        stockService.addBidOnAucction(NGToken, 1, 1, 10);
+        assertTrue(stockService.getAllAuctions(NOToken, 1).length == 1);
+        assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids.length == 1);
+        assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids[0].getStatus().equals(Status.AUCTION_PENDING));
 
-suspensionService.suspendRegisteredUser(2, 1, Admin);
-       
-
-        UIException ex = assertThrows(UIException.class, () ->
-                stockService.addRegularBid(NGToken, 1, 1, 30.0)
-        );
-
-        assertEquals("Suspended user trying to perform an action", ex.getMessage());
-    }
-
-    @Test
-    void Add_BidProduct_Failure_StoreNotFound() throws Exception {
-// <<<<<<< HEAD
-       
-        UIException ex = assertThrows(UIException.class, () ->
-                stockService.addRegularBid(NGToken, 0, 2, 30.0)
-        );
-
-
-        assertEquals("store not found on active purchases hashmap", ex.getMessage());
-    }
-
-    @Test
-    void Add_BidProduct_Failure_BidNotFound() throws Exception {
-// <<<<<<< HEAD
-        
-        // Bid ID not found
-        
-
-        DevException ex = assertThrows(DevException.class, () ->
-                stockService.addRegularBid(NGToken, 2, 1, 30.0)
-        );
-
-
-        assertEquals("Bid ID not found in active bids!", ex.getMessage());
-    }
-
-    //Needs Fixing!
-    //AddAUCTION
-   @Test
-   void Add_AuctionBidToSpecialCart_Success_won() throws Exception {
-         stockService.addBidOnAucction(NGToken, 1, 1, 10);
-       assertTrue(stockService.getAllAuctions(NOToken, 1).length==1);
-               assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids.length==1);
-                                assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids[0].getStatus().equals(Status.AUCTION_PENDING));
-
-              Thread.sleep(500);
+        Thread.sleep(500);
         assertTrue(stockService.getAllAuctions(NOToken, 1)[0].status.equals(AuctionStatus.IN_PROGRESS));
-                assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids[0].getStatus().equals(Status.AUCTION_PENDING));
+        assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids[0].getStatus().equals(Status.AUCTION_PENDING));
+        stockService.addBidOnAucction(NGToken, 1, 1, 20);
+        assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids.length == 2);
 
-              Thread.sleep(500);
-
+        Thread.sleep(500);
 
         assertTrue(stockService.getAllAuctions(NOToken, 1)[0].status.equals(AuctionStatus.FINISH));
-                assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids[0].getStatus().equals(Status.AUCTION_WON));
+        assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids[0].getStatus().equals(Status.AUCTION_LOSED));
 
         PaymentDetails paymentDetails = PaymentDetails.testPayment(); // fill if needed
-       SupplyDetails supplyDetails = SupplyDetails.getTestDetails(); // fill if needed
-     ReceiptDTO[] receipts =   purchaseService.finalizeSpecialCart(NGToken, paymentDetails, supplyDetails);
+        SupplyDetails supplyDetails = SupplyDetails.getTestDetails(); // fill if needed
 
-assertNotNull(receipts);
-       assertEquals(1, receipts.length);
-       assertEquals("TestStore", receipts[0].getStoreName());
-       assertEquals(10,
-               receipts[0].getProductsList().size() * receipts[0].getProductsList().get(0).getPrice());
+        UIException ex = assertThrows(UIException.class,
+                () -> purchaseService.finalizeSpecialCart(NGToken, paymentDetails, supplyDetails));
+        assertEquals("Product not available", ex.getMessage());
 
-       List<ReceiptDTO> result = orderService.getReceiptDTOsByUser(NGToken);
-
-       assertEquals(1, result.size());
-       ReceiptDTO r = result.get(0);
-       assertEquals("TestStore", r.getStoreName());
-       assertEquals(10, r.getFinalPrice());
-
-   }
-   @Test
-   void Add_AuctionBidToSpecialCart_Success_lost() throws Exception {
-         stockService.addBidOnAucction(NGToken, 1, 1, 10);
-       assertTrue(stockService.getAllAuctions(NOToken, 1).length==1);
-               assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids.length==1);
-                                assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids[0].getStatus().equals(Status.AUCTION_PENDING));
-
-              Thread.sleep(500);
-        assertTrue(stockService.getAllAuctions(NOToken, 1)[0].status.equals(AuctionStatus.IN_PROGRESS));
-                assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids[0].getStatus().equals(Status.AUCTION_PENDING));
-         stockService.addBidOnAucction(NGToken, 1, 1, 20);
-                         assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids.length==2);
-
-
-              Thread.sleep(500);
-
-
-        assertTrue(stockService.getAllAuctions(NOToken, 1)[0].status.equals(AuctionStatus.FINISH));
-                assertTrue(stockService.getAllAuctions(NOToken, 1)[0].bids[0].getStatus().equals(Status.AUCTION_LOSED));
-
-        PaymentDetails paymentDetails = PaymentDetails.testPayment(); // fill if needed
-       SupplyDetails supplyDetails = SupplyDetails.getTestDetails(); // fill if needed
-
- UIException ex = assertThrows(UIException.class, () ->
-purchaseService.finalizeSpecialCart(NGToken, paymentDetails, supplyDetails)        );
-       assertEquals("Product not available", ex.getMessage());
-
-   }
+    }
 
     @Test
     void Add_AuctionBid_Failure_InvalidToken() throws UIException {
         String token = "bad-token";
 
-      
-
-        UIException ex = assertThrows(UIException.class, () ->
-                stockService.addBidOnAucction(token, 555, 100, 60.0)
-        );
+        UIException ex = assertThrows(UIException.class, () -> stockService.addBidOnAucction(token, 555, 100, 60.0));
 
         assertEquals("Invalid token!", ex.getMessage());
     }
 
     @Test
     void Add_AuctionBid_Failure_UserSuspended() throws Exception {
-      
-       suspensionService.suspendRegisteredUser(2, 1, Admin);
 
-        UIException ex = assertThrows(UIException.class, () ->
-                stockService.addBidOnAucction(NGToken, 1, 1, 60.0)
-        );
+    suspensionService.suspendRegisteredUser(authRepo.getUserId(NGToken), 1, Admin);
 
-        assertEquals("Suspended user trying to perform an action", ex.getMessage());
+    UIException ex = assertThrows(UIException.class, () ->
+    stockService.addBidOnAucction(NGToken, 1, 1, 60.0)
+    );
+
+    assertEquals("Suspended user trying to perform an action", ex.getMessage());
     }
 
     @Test
     void Add_AuctionBid_Failure_StoreNotFound() throws Exception {
-        
-        UIException ex = assertThrows(UIException.class, () ->
-                stockService.addBidOnAucction(NGToken, 1, 2, 60.0)
-        );
+
+        UIException ex = assertThrows(UIException.class, () -> stockService.addBidOnAucction(NGToken, 1, 2, 60.0));
 
         assertEquals("store not found on active purchases hashmap", ex.getMessage());
     }
 
     @Test
-    void Add_AuctionBid_Failure_AuctionNotFound() throws Exception {
-       
-        DevException ex = assertThrows(DevException.class, () ->
-                stockService.addBidOnAucction(NGToken, 2, 1, 60.0)
-        );
+    void Add_AuctionBid_Failure_AuctionNotFound()  {
 
-        assertEquals("Auction ID not found in active auctions!", ex.getMessage());
+        try{
+            stockService.addBidOnAucction(NGToken, 2, 1, 60.0);
+            assertTrue(false);
+        }
+        catch (Exception exception){
+            assertTrue(true);
+        }
     }
 
-    //Needs Fixing!
-//     //AddRANDOM
-   @Test
-   void Set_ProductToRandom_Success() throws Exception {
-                PaymentDetails paymentDetails = PaymentDetails.testPayment(); // fill if needed
-                        SupplyDetails supplyDetails = SupplyDetails.getTestDetails(); // fill if needed
+    // Needs Fixing!
+    // //AddRANDOM
+    @Test
+    void Set_ProductToRandom_Success() throws Exception {
+        PaymentDetails paymentDetails = PaymentDetails.testPayment(); // fill if needed
+        SupplyDetails supplyDetails = SupplyDetails.getTestDetails(); // fill if needed
 
+        purchaseService.participateInRandom(NGToken, 1, 1, 2000, paymentDetails);
 
+        assertTrue(stockService.getAllRandomInStore(NOToken, 1)[0].participations.length == 1);
+        assertTrue(stockService.getAllRandomInStore(NOToken, 1)[0].participations[0].won());
+        // assertTrue(stockService.getAllRandomInStore(NOToken, 1)[0].winner.userId==4);
 
+        ReceiptDTO[] receipts = purchaseService.finalizeSpecialCart(NGToken, paymentDetails, supplyDetails);
 
-       purchaseService.participateInRandom(NGToken,1 , 1, 2000, paymentDetails);
+        assertNotNull(receipts);
+        assertEquals(1, receipts.length);
+        assertEquals("TestStore", receipts[0].getStoreName());
+        assertEquals(0,
+                receipts[0].getProductsList().size() * receipts[0].getProductsList().get(0).getPrice());
 
+        List<ReceiptDTO> result = orderService.getReceiptDTOsByUser(NGToken);
 
-       assertTrue(stockService.getAllRandomInStore(NOToken, 1)[0].participations.length==1);
-       assertTrue(stockService.getAllRandomInStore(NOToken, 1)[0].participations[0].won());
-        //       assertTrue(stockService.getAllRandomInStore(NOToken, 1)[0].winner.userId==4);
+        assertEquals(1, result.size());
+        ReceiptDTO r = result.get(0);
+        assertEquals("TestStore", r.getStoreName());
+        assertEquals(0, r.getFinalPrice());
 
+    }
 
+    // Needs Fixing!
+    // @Test
+    void Set_ProductToRandom_didntwin() throws Exception {
+        PaymentDetails paymentDetails = PaymentDetails.testPayment(); // fill if needed
+        SupplyDetails supplyDetails = SupplyDetails.getTestDetails(); // fill if needed
 
-     ReceiptDTO[] receipts =   purchaseService.finalizeSpecialCart(NGToken, paymentDetails, supplyDetails);
+        purchaseService.participateInRandom(NGToken, 1, 1, 1, paymentDetails);
+        purchaseService.participateInRandom(NOToken, 1, 1, 1999, paymentDetails);
 
- assertNotNull(receipts);
-       assertEquals(1, receipts.length);
-       assertEquals("TestStore", receipts[0].getStoreName());
-       assertEquals(0,
-               receipts[0].getProductsList().size() * receipts[0].getProductsList().get(0).getPrice());
+        assertTrue(stockService.getAllRandomInStore(NOToken, 1)[0].participations.length == 2);
+        assertFalse(stockService.getAllRandomInStore(NOToken, 1)[0].participations[0].won());
+        // assertTrue(stockService.getAllRandomInStore(NOToken, 1)[0].winner.userId==4);
 
-       List<ReceiptDTO> result = orderService.getReceiptDTOsByUser(NGToken);
+        ReceiptDTO[] receipts = purchaseService.finalizeSpecialCart(NGToken, paymentDetails, supplyDetails);
 
-       assertEquals(1, result.size());
-       ReceiptDTO r = result.get(0);
-       assertEquals("TestStore", r.getStoreName());
-       assertEquals(0, r.getFinalPrice());
+        assertNotNull(receipts);
+        assertEquals(0, receipts.length);
 
-   }
-    //Needs Fixing!
-//    @Test
-   void Set_ProductToRandom_didntwin() throws Exception {
-                PaymentDetails paymentDetails = PaymentDetails.testPayment(); // fill if needed
-                        SupplyDetails supplyDetails = SupplyDetails.getTestDetails(); // fill if needed
-
-
-
-
-       purchaseService.participateInRandom(NGToken,1 , 1, 1, paymentDetails);
-               purchaseService.participateInRandom(NOToken,1 , 1, 1999, paymentDetails);
-
-
-
-       assertTrue(stockService.getAllRandomInStore(NOToken, 1)[0].participations.length==2);
-       assertFalse(stockService.getAllRandomInStore(NOToken, 1)[0].participations[0].won());
-        //       assertTrue(stockService.getAllRandomInStore(NOToken, 1)[0].winner.userId==4);
-
-
-
-     ReceiptDTO[] receipts =   purchaseService.finalizeSpecialCart(NGToken, paymentDetails, supplyDetails);
-
- assertNotNull(receipts);
-       assertEquals(0, receipts.length);
-
-   }
-
+    }
 
     @Test
     void Set_ProductToRandom_Failure_InvalidToken() throws UIException {
-                        PaymentDetails paymentDetails = PaymentDetails.testPayment(); // fill if needed
+        PaymentDetails paymentDetails = PaymentDetails.testPayment(); // fill if needed
 
-  
-
-        UIException ex = assertThrows(UIException.class, () ->
-               purchaseService.participateInRandom("INvalid",1 , 1, 100, paymentDetails)
-        );
+        UIException ex = assertThrows(UIException.class,
+                () -> purchaseService.participateInRandom("INvalid", 1, 1, 100, paymentDetails));
 
         assertEquals("Invalid token!", ex.getMessage());
     }
 
     @Test
-    void Set_ProductToRandom_Failure_UserSuspended() throws Exception {                        PaymentDetails paymentDetails = PaymentDetails.testPayment(); // fill if needed
+    void Set_ProductToRandom_Failure_UserSuspended() throws Exception {
+    PaymentDetails paymentDetails = PaymentDetails.testPayment(); // fill if
 
+    suspensionService.suspendRegisteredUser(authRepo.getUserId(NGToken), 1, Admin);
+    UIException ex = assertThrows(UIException.class, () ->
+    purchaseService.participateInRandom(NGToken,1 , 1, 100, paymentDetails)
+    );
 
-        suspensionService.suspendRegisteredUser(authRepo.getUserId(NGToken), 1, Admin);
-        UIException ex = assertThrows(UIException.class, () ->
-               purchaseService.participateInRandom(NGToken,1 , 1, 100, paymentDetails)
-        );
-
-        assertEquals("Suspended user trying to perform an action", ex.getMessage());
+    assertEquals("Suspended user trying to perform an action", ex.getMessage());
     }
 
+    // Needs Fixing!
+    @Test
+    void Set_ProductToRandom_Failure_InvalidPrice() throws Exception {
 
-    //Needs Fixing!
-   @Test
-   void Set_ProductToRandom_Failure_InvalidPrice() throws Exception {
+        PaymentDetails paymentDetails = PaymentDetails.testPayment(); // fill if needed
 
-                         PaymentDetails paymentDetails = PaymentDetails.testPayment(); // fill if needed
+        UIException ex = assertThrows(UIException.class,
+                () -> purchaseService.participateInRandom(NGToken, 1, 1, 0, paymentDetails));
 
-       UIException ex = assertThrows(UIException.class, () ->
-              purchaseService.participateInRandom(NGToken,1 , 1, 0, paymentDetails)
-       );
-
-       assertEquals("Product price must be positive!", ex.getMessage());
-   }
-
-
-
-
-
-
+        assertEquals("Product price must be positive!", ex.getMessage());
+    }
 
 }
